--- a/Skills.html
+++ b/Skills.html
@@ -1,2 +1,31 @@
-git config --global user.email "phaswane.ramokone@org.za"
-  git config --global user.name "Phaswane-Ramokone-Rams"
+
+  <!DOCTYPE html>
+<html>
+    <head>
+        <title>PHASWANE-RAMOKONE-RAMS PORTFOLIO</title>
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <link rel="stylesheet" href="index.css" >
+    </head>
+    <body>
+    </body>
+
+    <!-------------Footer/ last page of the web------------->
+    <footer>
+      <div class="footer-con">
+          <p>&coprod; Office No:4 ~ 02 BrainWave,CapaCiti</p>
+          <div class="social-media-icons">
+              <a href="#" target="_blank">
+                  <img src="Git1.png" alt="GitHub">
+              </a>
+             
+              <a href="" target="_blank">
+                  <img src="In1.jpg" alt="LinkedIn">
+              </a>
+              <a href="#" target="_blank">
+                  <img src="gmail.png" alt="gmail">
+              </a>
+          </div>
+          <p>&copy; 2024 PHASWANE-RAMOKONE-RAMS. All rights reserved.</p>
+      </div>
+  </footer>
+</html>
