--- a/Projects.html
+++ b/Projects.html
@@ -8,7 +8,9 @@
     <body>
         <section class="header" id="header1">
             <nav>
-                <div class="para"><p>PHASWANE-RAMOKONE</p></div>
+                <div class="para"><p>PHASWANE-RAMOKONE</p>
+                    <img src="PROOOO.jpg" alt="pro-pic">
+                </div>
                 <div class="nav-links" id="navLinks">
                     
                     <i ><img class="img-bar1"  src="delete-sign.png" alt="close button" onclick="hideMenu()" ></i>
@@ -39,7 +41,7 @@
      <footer class="footer">
         <div class="row">
              <div class="col">
-                <img src="#" class="logo1" alt="Profile Pic">
+                <img src="pppppp.jpg" class="logo1" alt="Profile Pic">
                 <p>Offers
                     strong interpersonal and task-prioritization skills,
                     eagerness to contribute towards team success
