--- a/Skills.html
+++ b/Skills.html
@@ -2,15 +2,16 @@
   <!DOCTYPE html>
 <html>
     <head>
-        <title>PHASWANE-RAMOKONE-RAMS PORTFOLIO</title>
+        <title>PHASWANE-RAMOKONE-RAMS PORTFOLIO/Skills</title>
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <link rel="stylesheet" href="index.css" >
+        <link rel="icon" type="image" href="profile.jpg">
     </head>
     <body>
         <section class="header" id="header1">
             <nav>
                 <div class="para"><p>PHASWANE-RAMOKONE</p>
-                    <img src="PROOOO.jpg" alt="pro-pic">
+                    <img src="profile.jpg" alt="pro-pic">
                 </div>
                 <div class="nav-links" id="navLinks">
                     
@@ -18,7 +19,6 @@
                     <ul>
                         
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Contact</a></li>
                         <li><a href="Projects.html">Projects</a></li>
                         <li><a href="About.html">About</a></li>
                     </ul>
@@ -117,21 +117,20 @@
              <div class="col">
                 <h3>Links</h3>
                 <ul class="">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Projects.html">Projects</a></li>
+                    <li><a href="About.html">About</a></li>
                 </ul>
              </div>
              <div class="col">
                 <div class="social-icons">
-                    <a href="#" target="_blank">
+                    <a href="www.linkedin.com/in/phaswane-ramokone-a7333b301" target="_blank">
                         <img class="img1" src="In1.jpg" alt="LinkedIn">
                      </a>
                      <a href="#" target="_blank">
                         <img class="img1" src="gmail.png" alt="gmail">
                      </a>
-                     <a href="#" target="_blank">
+                     <a href="https://github.com/Phaswane-Ramokone-Rams" target="_blank">
                         <img class="img1" src="Git1.png" alt="GitHub">
                       </a>
                 </div>
@@ -139,9 +138,11 @@
         </div>
         <hr>
         <p class="copyright">&copy;  2024 PHASWANE-RAMOKONE-RAMS. All rights reserved.</p>
+
+    </div>
     </footer>
 
 
- </div> 
+  
 </body>      
 </html>
