--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
        <i><h1>IMAGE-MAP</h1></i>
        <i><p>EXPLORE MORE BY CLICKING ON THE HEAD, BOOK AND CERT</p></i>
 
-         <a href="Skills.html" class="area1"><img src="#" height="10px" width="10px"></a><!-------book-------->
-         <a href="About.html" class="area2"><img  src="#" height="10px" width="10px"></a><!-------head-------->
-         <a href="Projects.html" class="area3"><img  src="#" height="10px" width="10px"></a><!--------diploma------->
+         <a href="Skills.html" class="area1"></a><!-------book-------->
+         <a href="About.html" class="area2"></a><!-------head-------->
+         <a href="Projects.html" class="area3"></a><!--------diploma------->
 
     </div>
     
